Refine sequence stage timeline handling