@@ -1,6 +1,7 @@
 package script.winnerCustomization.service;
 
 import org.junit.jupiter.api.Test;
+import script.winnerCustomization.model.AppConfig;
 import script.winnerCustomization.model.Detection;
 import script.winnerCustomization.model.SequenceRecord;
 
@@ -10,129 +11,130 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class SequenceEngineTest {
-    private final SequenceEngine sequenceEngine = new SequenceEngine();
+    private final SequenceEngine engine = new SequenceEngine();
 
     @Test
-    void buildsRealStagesAndCreatesPartialOutForAnotherStage() {
+    void realStagesDeduplicateRepeatedInAndReopenAfterStickyOut() {
         List<Detection> detections = List.of(
-                new Detection(1, "AA1111", 1001, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
-                new Detection(2, "AA1111", 1002, 200, LocalDateTime.of(2026, 3, 1, 10, 10)),
-                new Detection(3, "AA1111", 1005, 10, LocalDateTime.of(2026, 3, 1, 10, 15)),
-                new Detection(4, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 20))
+                new Detection(1, "AA1111", 1003, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
+                new Detection(2, "AA1111", 1003, 10, LocalDateTime.of(2026, 3, 1, 10, 1)),
+                new Detection(3, "AA1111", 1005, 200, LocalDateTime.of(2026, 3, 1, 10, 10)),
+                new Detection(4, "AA1111", 1003, 10, LocalDateTime.of(2026, 3, 1, 10, 12))
         );
 
-        List<SequenceRecord> records = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 12, 0));
+        AppConfig config = TestConfigFactory.config();
+        config.setTransitionalStages(List.of());
 
-        assertThat(records).hasSize(2);
-        SequenceRecord firstRecord = records.getFirst();
-        assertThat(firstRecord.stagesChronologically()).hasSize(3);
-        assertThat(firstRecord.stagesChronologically().get(0).stageName()).isEqualTo("drive_in");
-        assertThat(firstRecord.stagesChronologically().get(0).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 10));
-        assertThat(firstRecord.stagesChronologically().get(1).stageName()).isEqualTo("backyard");
-        assertThat(firstRecord.stagesChronologically().get(2).partial()).isTrue();
-        assertThat(firstRecord.stagesChronologically().get(2).timeIn()).isNull();
-        assertThat(firstRecord.stagesChronologically().get(2).stageName()).isEqualTo("service");
-        assertThat(firstRecord.isClosed()).isTrue();
+        SequenceRecord record = engine.build(detections, config, LocalDateTime.of(2026, 3, 1, 10, 30)).getFirst();
 
-        assertThat(records.get(1).stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
-                .containsExactly("service");
-        assertThat(records.get(1).isClosed()).isFalse();
-    }
-
-    @Test
-    void materializesTransitionalStageAfterTimeoutWithoutDuplicatingSameBackyard() {
-        List<Detection> detections = List.of(
-                new Detection(1, "AA1111", 1001, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
-                new Detection(2, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 5)),
-                new Detection(3, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 6)),
-                new Detection(4, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 9))
-        );
-
-        List<SequenceRecord> records = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 12, 0));
-        SequenceRecord backyardRecord = records.getFirst();
-        SequenceRecord serviceRecord = records.get(1);
-
-        assertThat(records).hasSize(2);
-        assertThat(backyardRecord.stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
-                .containsExactly("drive_in", "backyard");
-        assertThat(backyardRecord.stagesChronologically().get(1).stageType()).isEqualTo(SequenceRecord.StageType.TRANSITIONAL);
-        assertThat(backyardRecord.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 5));
-        assertThat(backyardRecord.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 6));
-        assertThat(backyardRecord.isClosed()).isTrue();
-        assertThat(serviceRecord.stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
-                .containsExactly("service");
-    }
-
-    @Test
-    void keepsSingleCameraStageOpenUntilReportTimeAndAggregatesRepeatedDetections() {
-        List<Detection> detections = List.of(
-                new Detection(1, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0)),
-                new Detection(2, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0, 10)),
-                new Detection(3, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0, 20))
-        );
-
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 9, 0, 40)).getFirst();
-
-        assertThat(record.stagesChronologically()).hasSize(1);
-        assertThat(record.stagesChronologically().getFirst().timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0));
-        assertThat(record.stagesChronologically().getFirst().timeOut()).isNull();
-        assertThat(record.stagesChronologically().getFirst().lastSeenAt()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0, 20));
+        assertThat(record.stagesChronologically()).hasSize(2);
+        assertThat(record.stagesChronologically().get(0).stageName()).isEqualTo("service");
+        assertThat(record.stagesChronologically().get(0).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 0));
+        assertThat(record.stagesChronologically().get(0).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 10));
+        assertThat(record.stagesChronologically().get(1).stageName()).isEqualTo("service");
+        assertThat(record.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 12));
+        assertThat(record.stagesChronologically().get(1).timeOut()).isNull();
         assertThat(record.isClosed()).isFalse();
     }
 
     @Test
-    void keepsSingleCameraStageStickyAcrossLongGapsUntilRealOutArrives() {
+    void partialRealOutDoesNotDestroyActiveSingleCameraStage() {
         List<Detection> detections = List.of(
-                new Detection(1, "AA4444PO", 1003, 90, LocalDateTime.of(2026, 3, 18, 16, 4, 13)),
-                new Detection(2, "AA4444PO", 1101, null, LocalDateTime.of(2026, 3, 18, 16, 4, 37)),
-                new Detection(3, "AA4444PO", 1101, null, LocalDateTime.of(2026, 3, 18, 16, 21, 7)),
-                new Detection(4, "AA4444PO", 1101, null, LocalDateTime.of(2026, 3, 18, 17, 15, 48)),
-                new Detection(5, "AA4444PO", 1005, 10, LocalDateTime.of(2026, 3, 18, 17, 17, 0))
+                new Detection(1, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 10, 0)),
+                new Detection(2, "AA1111", 1005, 10, LocalDateTime.of(2026, 3, 1, 10, 5))
         );
 
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 18, 18, 0)).getFirst();
+        AppConfig config = TestConfigFactory.config();
+        config.setTransitionalStages(List.of());
+        config.getSingleCameraStages().getFirst().setTimeoutSeconds(3600);
+
+        SequenceRecord record = engine.build(detections, config, LocalDateTime.of(2026, 3, 1, 10, 10)).getFirst();
 
         assertThat(record.stagesChronologically()).hasSize(2);
-        assertThat(record.stagesChronologically().get(0).stageName()).isEqualTo("service");
-        assertThat(record.stagesChronologically().get(0).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 18, 16, 4, 37));
-        assertThat(record.stagesChronologically().get(1).stageName()).isEqualTo("post_1");
-        assertThat(record.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 18, 16, 4, 37));
-        assertThat(record.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 18, 17, 17, 0));
-        assertThat(record.stagesChronologically().get(1).partial()).isFalse();
+        assertThat(record.stagesChronologically().get(0).stageName()).isEqualTo("post_1");
+        assertThat(record.stagesChronologically().get(0).timeOut()).isNull();
+        assertThat(record.stagesChronologically().get(1).stageName()).isEqualTo("service");
+        assertThat(record.stagesChronologically().get(1).partial()).isTrue();
+        assertThat(record.stagesChronologically().get(1).timeIn()).isNull();
+        assertThat(record.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 5));
     }
 
     @Test
-    void closesSingleCameraStageAtLastSeenWhenOnlyPostDetectionsExist() {
+    void transitionalCandidateFromCameraResetsTimeoutAndClosesOnNextStageStart() {
+        AppConfig config = TestConfigFactory.config();
+        config.getTransitionalStages().getFirst().setShowInReportIfIncomplete(true);
+        config.getTransitionalStages().getFirst().setSequenceCloseTimeoutOverrideSeconds(3600);
+
         List<Detection> detections = List.of(
-                new Detection(1, "KA1163K", 1101, null, LocalDateTime.of(2026, 3, 18, 14, 34, 35)),
-                new Detection(2, "KA1163K", 1101, null, LocalDateTime.of(2026, 3, 18, 14, 40, 4)),
-                new Detection(3, "KA1163K", 1101, null, LocalDateTime.of(2026, 3, 18, 14, 43, 26))
+                new Detection(1, "AA1111", 1001, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
+                new Detection(2, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 5)),
+                new Detection(3, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 6)),
+                new Detection(4, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 10))
         );
 
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 18, 15, 30)).getFirst();
+        List<SequenceRecord> records = engine.build(detections, config, LocalDateTime.of(2026, 3, 1, 11, 0));
 
-        assertThat(record.stagesChronologically()).hasSize(1);
-        assertThat(record.stagesChronologically().getFirst().stageName()).isEqualTo("post_1");
-        assertThat(record.stagesChronologically().getFirst().timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 18, 14, 34, 35));
-        assertThat(record.stagesChronologically().getFirst().timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 18, 14, 43, 26));
+        assertThat(records).hasSize(1);
+        assertThat(records.getFirst().stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
+                .containsExactly("drive_in", "backyard", "service");
+        assertThat(records.getFirst().stagesChronologically().get(1).timeIn())
+                .isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 5));
+        assertThat(records.getFirst().stagesChronologically().get(1).timeOut())
+                .isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 9, 59));
+    }
+
+    @Test
+    void transitionsCanInsertTransitionalStageBetweenDifferentConcreteStages() {
+        AppConfig config = TestConfigFactory.config();
+        config.getTransitionalStages().getFirst().setShowInReportIfIncomplete(true);
+        config.getTransitionalStages().getFirst().setSequenceCloseTimeoutOverrideSeconds(3600);
+
+        List<Detection> detections = List.of(
+                new Detection(1, "AA1111", 1001, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
+                new Detection(2, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 5)),
+                new Detection(3, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 6))
+        );
+
+        SequenceRecord record = engine.build(detections, config, LocalDateTime.of(2026, 3, 1, 11, 0)).getFirst();
+
+        assertThat(record.stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
+                .containsExactly("drive_in", "backyard", "service");
+    }
+
+    @Test
+    void singleCameraStageSplitsAfterItsOwnTimeout() {
+        List<Detection> detections = List.of(
+                new Detection(1, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 10, 0)),
+                new Detection(2, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 10, 10)),
+                new Detection(3, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 10, 50))
+        );
+
+        SequenceRecord record = engine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 11, 0)).getFirst();
+
+        assertThat(record.stagesChronologically()).hasSize(3);
+        assertThat(record.stagesChronologically().get(0).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 0));
+        assertThat(record.stagesChronologically().get(0).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 0));
+        assertThat(record.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 10));
+        assertThat(record.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 10));
+        assertThat(record.stagesChronologically().get(2).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 50));
+        assertThat(record.stagesChronologically().get(2).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 50));
+    }
+
+    @Test
+    void sequenceCloseWhileSingleCameraIsStillActiveLeavesOutEmpty() {
+        AppConfig config = TestConfigFactory.config();
+        config.setSequenceCloseTimeoutMinutes(5);
+        config.getSingleCameraStages().getFirst().setTimeoutSeconds(3600);
+
+        SequenceRecord record = engine.build(
+                List.of(new Detection(1, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 10, 0))),
+                config,
+                LocalDateTime.of(2026, 3, 1, 10, 20))
+                .getFirst();
+
         assertThat(record.isClosed()).isTrue();
+        assertThat(record.getFinishedAt()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 5));
+        assertThat(record.stagesChronologically()).hasSize(1);
+        assertThat(record.stagesChronologically().getFirst().timeOut()).isNull();
     }
-    @Test
-    void closesSingleCameraStageAtLastSeenWhenSequenceTimeoutStartsNewSequence() {
-        List<Detection> detections = List.of(
-                new Detection(1, "1163KK", 1101, null, LocalDateTime.of(2026, 3, 18, 15, 55, 7)),
-                new Detection(2, "1163KK", 1101, null, LocalDateTime.of(2026, 3, 18, 15, 56, 7)),
-                new Detection(3, "1163KK", 1101, null, LocalDateTime.of(2026, 3, 18, 17, 30, 0))
-        );
-
-        List<SequenceRecord> records = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 18, 18, 0));
-
-        assertThat(records).hasSize(2);
-        assertThat(records.get(0).stagesChronologically()).hasSize(1);
-        assertThat(records.get(0).stagesChronologically().getFirst().timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 18, 15, 56, 7));
-        assertThat(records.get(0).isClosed()).isTrue();
-        assertThat(records.get(1).stagesChronologically()).hasSize(1);
-        assertThat(records.get(1).stagesChronologically().getFirst().timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 18, 17, 30, 0));
-    }
-
 }
